2025-10-08T12:54:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18345317917 # 1270
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
* notice: last 14d: unq all: 24 55
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 5936 / 1246 5989
* notice: next accum: outdated-unq outdated-all / unq all: 1222 5936 / 1248 5991
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-10-08]

2025-10-08T01:54:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18331338449 # 1269
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
* notice: last 14d: unq all: 22 53
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 5936 / 1243 5986
* notice: next accum: outdated-unq outdated-all / unq all: 1222 5936 / 1246 5989
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [] / [2025-10-07]

2025-10-07T12:53:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18313302690 # 1268
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
* notice: last 14d: unq all: 20 50
* notice: prev accum: outdated-unq outdated-all / unq all: 1219 5928 / 1242 5985
* notice: next accum: outdated-unq outdated-all / unq all: 1222 5936 / 1243 5986
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-23] / [2025-10-07]

2025-10-07T01:54:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18299675451 # 1267