@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-08T12:54:01Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-10-09T01:55:31Z",
+  "count" : 20,
+  "count_minmax" : [ 2, 20 ],
+  "count_decinc" : [ -0, +20 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
