@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-08T12:54:01Z",
+  "timestamp" : "2025-10-09T01:55:31Z",
   "count_outdated" : 5936,
   "uniques_outdated" : 1222,
-  "count" : 5991,
-  "uniques" : 1248,
+  "count" : 6009,
+  "uniques" : 1250,
   "views" : [
     {
       "timestamp": "2025-09-27T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2025-10-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 20,
+      "count_minmax": [ 2, 20 ],
+      "count_decinc": [ 0, 20 ],
+      "uniques": 4,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
