@@ -1,6 +1,6 @@
 {
-  "count": 55,
-  "uniques": 24,
+  "count": 73,
+  "uniques": 26,
   "views": [
     {
       "timestamp": "2025-09-27T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2025-10-08T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 20,
+      "uniques": 4
     }
   ]
 }
